--- a/tests/vagrant/vanilla/Vagrantfile
+++ b/tests/vagrant/vanilla/Vagrantfile
@@ -1,17 +1,19 @@
+load '../funcs.rb'
+
 Vagrant.configure("2") do |config|
 
   config.vm.synced_folder "../../..", "/cloudinabox", id: "cloudinabox", automount: false
-  config.vm.provision "file", source:"../globals.sh", destination:"globals.sh"
   config.vm.network "public_network"
 
   # vanilla install
 
   config.vm.define "vanilla" do |m1|
-    m1.vm.box = "ubuntu/bionic64"
+    use_preloaded_box m1,"ubuntu/bionic64",".."
+    #use_preloaded_box m1,"ubuntu/focal64"
     m1.vm.provision :shell, :inline => <<-SH
-source globals.sh || exit 1
-export PRIMARY_HOSTNAME=vanilla.local
 cd /cloudinabox
+source tests/vagrant/globals.sh || exit 1
+export PRIMARY_HOSTNAME=vanilla.local
 tests/system-setup/vanilla.sh; rc=$?
 echo "EXITCODE: $rc"
 SH
