redis won't install on Travis probably because of the ip6 configuration. try including Travis's redis with the base image.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ jobs:
     os: linux
     dist: bionic
     name: vanilla-bionic    
+    services:
+      - redis-server
     install:
       - sudo tests/system-setup/vanilla.sh -v
     script:
