--- a/tests/vagrant/Vagrantfile
+++ b/tests/vagrant/Vagrantfile
@@ -3,19 +3,22 @@ load './funcs.rb'
 Vagrant.configure("2") do |config|
 
   config.vm.synced_folder "../..", "/cloudinabox", id: "cloudinabox", automount: false
+  testing = Testing.new
+  testing.say_groups
 
   #
   # vanilla with ubuntu 18 (bionic), then upgrade to ubuntu 20 (focal)
   # requires plugin 'vagrant-reload'
   #
 
-  config.vm.define "vanilla-bionic2focal" do |m1|
-    if !Vagrant.has_plugin?('vagrant-reload')
-      raise("Plugin 'vagrant-reload' is required")
-    end
+  if testing.group('relupgrade')
+    config.vm.define "vanilla-bionic2focal" do |m1|
+      if !Vagrant.has_plugin?('vagrant-reload')
+        raise("Plugin 'vagrant-reload' is required")
+      end
     
-    use_preloaded_box m1, "ubuntu/bionic64"
-    m1.vm.provision :shell, :inline => <<-SH
+      use_preloaded_box m1, "ubuntu/bionic64"
+      m1.vm.provision :shell, :inline => <<-SH
 cd /cloudinabox
 source tests/vagrant/globals.sh || exit 1
 export PRIMARY_HOSTNAME=b2f1.abc.com
@@ -24,28 +27,29 @@ tests/system-setup/vanilla.sh -v || exit 1
 tests/runner.sh default || exit 2
 SH
 
-    # reboot may be required when updates were applied
-    m1.vm.boot_timeout = 600
-    m1.vm.provision :reload
+      # reboot may be required when updates were applied
+      m1.vm.boot_timeout = 600
+      m1.vm.provision :reload
 
-    # upgrade ubuntu
-    m1.vm.provision :shell, :inline => <<-SH
+      # upgrade ubuntu
+      m1.vm.provision :shell, :inline => <<-SH
 cd /cloudinabox
 tests/bin/wait_for_network.sh
 tests/bin/do_release_upgrade.sh || exit 3
 SH
 
-    # reboot required after any system upgrade
-    m1.vm.provision :reload
+      # reboot required after any system upgrade
+      m1.vm.provision :reload
 
-    m1.vm.provision :shell, :inline => <<-SH
+      m1.vm.provision :shell, :inline => <<-SH
 cd /cloudinabox
 source tests/system-setup/setup-defaults.sh
 setup/start.sh -v || exit 4
 tests/runner.sh default || exit 5
 SH
+    end
   end
-
+  
   
   #
   # vanilla with encryption-at-rest / focal
