--- a/tests/vagrant/Vagrantfile
+++ b/tests/vagrant/Vagrantfile
@@ -7,21 +7,21 @@ Vagrant.configure("2") do |config|
   testing.say_groups
 
   #
-  # vanilla with ubuntu 18 (bionic), then upgrade to ubuntu 20 (focal)
+  # vanilla with ubuntu 20 (focal), then upgrade to ubuntu 22 (jammy)
   # requires plugin 'vagrant-reload'
   #
 
   if testing.group('relupgrade')
-    config.vm.define "vanilla-bionic2focal" do |m1|
+    config.vm.define "vanilla-focal2jammy" do |m1|
       if !Vagrant.has_plugin?('vagrant-reload')
         raise("Plugin 'vagrant-reload' is required")
       end
     
-      use_preloaded_box m1, "ubuntu/bionic64"
+      use_preloaded_box m1, "ubuntu/focal64"
       m1.vm.provision :shell, :inline => <<-SH
 cd /cloudinabox
 source tests/vagrant/globals.sh || exit 1
-export PRIMARY_HOSTNAME=b2f1.abc.com
+export PRIMARY_HOSTNAME=f2j1.abc.com
 export SKIP_SYSTEM_UPDATE=0
 tests/system-setup/vanilla.sh -v || exit 1
 tests/runner.sh default || exit 2
@@ -56,7 +56,7 @@ SH
   #
   
   config.vm.define "vanilla-ehdd-focal" do |m1|
-    use_preloaded_box m1, "ubuntu/focal64"    
+    use_preloaded_box m1, "ubuntu/jammy64"    
     m1.vm.provision :shell, :inline => <<-SH
 cd /cloudinabox
 source tests/vagrant/globals.sh || exit 1
@@ -69,11 +69,11 @@ SH
   end
 
   #
-  # from-backup: restore a backup, then install w/bionic
+  # from-backup: restore a backup, then install w/focal
   #
 
-  config.vm.define "from-backup-bionic" do |m1|
-    use_preloaded_box m1, "ubuntu/bionic64"
+  config.vm.define "from-backup-focal" do |m1|
+    use_preloaded_box m1, "ubuntu/focal64"
     m1.vm.provision :shell, :inline => <<-SH
 cd /cloudinabox
 source tests/vagrant/globals.sh || exit 1
