--- a/tests/vagrant/vanilla/Vagrantfile
+++ b/tests/vagrant/vanilla/Vagrantfile
@@ -8,8 +8,8 @@ Vagrant.configure("2") do |config|
   # vanilla install
 
   config.vm.define "vanilla" do |m1|
-    #use_preloaded_box m1,"ubuntu/bionic64",".."
-    use_preloaded_box m1,"ubuntu/focal64",".."
+    #use_preloaded_box m1,"ubuntu/focal64",".."
+    use_preloaded_box m1,"ubuntu/jammy64",".."
     m1.vm.provision :shell, :inline => <<-SH
 cd /cloudinabox
 source tests/vagrant/globals.sh || exit 1
