--- a/.github/workflows/commit-tests.yml
+++ b/.github/workflows/commit-tests.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: sudo apt-get remove --purge mysql* libmysql*
+      - run: sudo rm -rf /etc/mysql
+      - run: sudo rm -f /root/.my.cnf
+      - run: rm -f .my.cnf
       - run: sudo update-alternatives --set php /usr/bin/php7.4
       - name: setup
         run: sudo -E tests/system-setup/vanilla.sh -v
