--- a/.github/workflows/commit-tests.yml
+++ b/.github/workflows/commit-tests.yml
@@ -16,7 +16,7 @@ jobs:
           sudo rm -rf /etc/mysql
           sudo rm -f /root/.my.cnf
           rm -f .my.cnf
-          sudo systemctl reload apparmor.service
+          sudo systemctl stop apparmor.service
           #sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
           #sudo /usr/sbin/apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: update-alternatives
