attempt to disable mysql apparmor profile

--- a/.github/workflows/commit-tests.yml
+++ b/.github/workflows/commit-tests.yml
@@ -17,7 +17,7 @@ jobs:
           sudo rm -f /root/.my.cnf
           rm -f .my.cnf
           sudo systemctl stop apparmor.service
-          #sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
+          sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
           #sudo /usr/sbin/apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: update-alternatives
         run: sudo update-alternatives --set php /usr/bin/php7.4
