--- a/.github/workflows/commit-tests.yml
+++ b/.github/workflows/commit-tests.yml
@@ -1,9 +1,9 @@
 name: commit-tests
 on: [push, workflow_dispatch]
 jobs:
-  # CiaB vanilla on focal
+  # CiaB vanilla on jammy
   vanilla-focal:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     env:
       DOWNLOAD_NEXTCLOUD_FROM_GITHUB: true
       PRIMARY_HOSTNAME: box1.abc.com
