--- a/.github/workflows/commit-tests.yml
+++ b/.github/workflows/commit-tests.yml
@@ -16,6 +16,7 @@ jobs:
           sudo /usr/sbin/apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
           sudo apt-get remove --purge mysql* libmysql*
           sudo rm -rf /etc/mysql
+          sudo rm -rf /var/lib/mysql
           sudo rm -f /root/.my.cnf
           rm -f .my.cnf
       - name: setup
