--- a/conf/ehdd-unattended-upgrades-after.service
+++ b/conf/ehdd-unattended-upgrades-after.service
@@ -4,4 +4,4 @@ Description=Starts ehdd services
 [Service]
 Type=oneshot
 WorkingDirectory=<INSTALL_ROOT>
-ExecStart=<INSTALL_ROOT>/ehdd/startup.sh --no-mount
+ExecStart=<INSTALL_ROOT>/ehdd/run-this-after-reboot.sh --no-mount
