--- a/tests/vagrant/preloaded/Vagrantfile
+++ b/tests/vagrant/preloaded/Vagrantfile
@@ -3,11 +3,12 @@ Vagrant.configure("2") do |config|
 
   config.vm.synced_folder "../../..", "/cloudinabox", id: "cloudinabox", automount: false
 
-  config.vm.define "preloaded-ubuntu-focal64" do |m1|
-    m1.vm.box = "ubuntu/focal64"
+  config.vm.define "preloaded-ubuntu-jammy64" do |m1|
+    m1.vm.box = "ubuntu/jammy64"
+    m1.vm.boot_timeout = 30
     m1.vm.provision :shell, :inline => <<-SH
 cd /cloudinabox
-tests/vagrant/preloaded/prepvm.sh --no-dry-run
+tests/vagrant/preloaded/prepvm.sh
 rc=$?
 echo "$rc" > "tests/vagrant/preloaded/prepcode.txt"
 [ $rc -gt 0 ] && exit 1
@@ -15,12 +16,12 @@ exit 0
 SH
   end
 
-  config.vm.define "preloaded-ubuntu-jammy64" do |m1|
-    m1.vm.box = "ubuntu/jammy64"
+  config.vm.define "preloaded-ubuntu-noble64" do |m1|
+    m1.vm.box = "ubuntu/noble64"
     m1.vm.boot_timeout = 30
     m1.vm.provision :shell, :inline => <<-SH
 cd /cloudinabox
-tests/vagrant/preloaded/prepvm.sh --no-dry-run
+tests/vagrant/preloaded/prepvm.sh
 rc=$?
 echo "$rc" > "tests/vagrant/preloaded/prepcode.txt"
 [ $rc -gt 0 ] && exit 1
