--- a/tests/vagrant/vanilla/Vagrantfile
+++ b/tests/vagrant/vanilla/Vagrantfile
@@ -4,7 +4,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.synced_folder "../../..", "/cloudinabox", id: "cloudinabox", automount: false
   config.vm.network "public_network", bridge: "#$default_network_interface"
-  use_preloaded_box config, "ubuntu/jammy64", ".."
+  use_preloaded_box config, "ubuntu/noble64", ".."
 
   if ENV['tests']=='miab'
 
